--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ABPlayerController"]
 	path = ABPlayerController
-	url = https://github.com/jenghis/abplayercontroller.git
+	url = https://github.com/jerryrt/ABPlayerController.git
 [submodule "MediaKeys"]
 	path = MediaKeys
-	url = https://github.com/jenghis/mediakeys.git
+	url = https://github.com/jerryrt/MediaKeys.git
 [submodule "AirTunes"]
 	path = AirTunes
-	url = https://github.com/jenghis/airtunes.git
+	url = https://github.com/jerryrt/AirTunes.git
