adding iOS(starting from very old iOS 9.0) target for server backend modules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "AirTunes"]
 	path = AirTunes
 	url = https://github.com/jerryrt/AirTunes.git
+[submodule "SwiftyRSA"]
+	path = SwiftyRSA
+	url = https://github.com/jerryrt/SwiftyRSA.git
